<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item  android:id="@+id/sobre_juego"
        android:title="@string/about"
        android:onClick="presentation"
        android:text="@string/about"
        app:showAsAction="never"
        />
    <item android:id="@+id/personajes"
        android:title="@string/characters"
        android:onClick="charactersGame"
        android:text="@string/characters"
       />
    <item android:id="@+id/jugar"
        android:onClick="playGame"
        android:title="@string/play"
        android:text="@string/play"
       />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:onClick="exit"
        android:text="@string/logout" />
</menu>